projects/compiler/test/parser/strings_interpolation_error_invalid_expression.2.out
Error at %FILE_NAME%:1:5
Unexpected token '}':
  |  "${-}after"
         ^